# xmrMiner

./: .gitignore  CMakeLists.txt  COPYING  INSTALL  INSTALL.md  INTERFACE.md  README  README.md  ccminer.sln  cryptonight.c  cryptonight.h  miner.h  sha2.c  util.c  xmrMiner-config.h.cmake  xmrMiner.c
compat/jansson/: utf.h
compat/sys/: time.h
cryptonight/: cryptonight.cu  cuda_cryptonight_aes.hpp  cuda_cryptonight_blake.hpp  cuda_cryptonight_core.cu  cuda_cryptonight_extra.cu  cuda_cryptonight_groestl.hpp  cuda_cryptonight_jh.hpp  cuda_cryptonight_keccak.hpp  cuda_cryptonight_skein.hpp  cuda_device.hpp
